--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,8 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+vehicle tracking/car_log
+vehicle tracking/car_OD_valid.csv
+vehicle tracking/car_OD_all.csv
+vehicle tracking/car_log.txt
+vehicle tracking/car_log.py
