--- a/vehicle tracking/configFile.ini
+++ b/vehicle tracking/configFile.ini
@@ -1,7 +1,9 @@
 [main]
 
-folder = C:\Users\ALIX\Desktop\Alix\Python\Cities Skylines
+folder = .
 video_file = roundabout6_tmpe_1.mkv
-background_mode = prerun_MOG2
+background_mode = median
+background_history = 50
+background_image = C:\Users\ALIX\Desktop\Alix\Python\Cities Skylines\compare_backgrounds\median300_background.png
 expected_fps = 30
 useClock = True
